# aggregator-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.txt  Makefile  Pipfile  README.md  deploy.sh  manage.py  public-access-template.yaml  pyproject.toml  pytest.ini  run_local_api.py  samconfig.toml  template.yaml  valudate_api_response.py  zappa_settings.json
.circleci/: config.yml
.circleci/tests/: requirements.txt
.circleci/tests/system/: conftest.py  test_app_via_api_gateway.py  test_app_via_cloudfront.py  test_helpers.py
.dependabot/: config.yml
.github/: dependabot.yml
aggregator/: lambda_awsgi.py  s3_lambda_storage.py  urls.py  wsgi.py
aggregator/apps/api/: errors.py  middleware.py  urls.py
aggregator/apps/api/v1/: api_client.py  documentation.apibp  stitcher.py  urls.py  views.py
aggregator/apps/api/v1/docs/: notes.apibp  (+6 more)
aggregator/assets/css/: styles.scss
aggregator/settings/: aws_lambda.py  base.py  base_lambda.py  constants.py  lambda_debug_merged_assets.py  lambda_debug_unmerged_assets.py  lambda_development.py  lambda_no_debug_merged_assets.py  lambda_no_debug_unmerged_assets.py  lambda_production.py  lambda_staging.py  testing.py  zappa.py
aggregator/templates/: base.html  home.html  terms.html
aggregator/templates/includes/: badge-card.html
api/: list.txt
api/api_auth/: handler.py  pyproject.toml
api/basic_auth/: pyproject.toml
api/common/: async_requests.py  auth_models.py  conf.py  http_client.py  middleware.py  pyproject.toml  requirements.txt  settings.py  setup.py  url_resolver.py
api/common/common/: conf.py
api/common/dc_api_common.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/endpoints/: pyproject.toml
api/endpoints/v1/elections/: app.py  election_views.py  static_elections_client.py  voting_information_api_client.py
api/endpoints/v1/layers_of_state/: app.py
api/endpoints/v1/recall_petitions/: app.py  client.py
api/endpoints/v1/sandbox/: app.py
api/endpoints/v1/voting_information/: address.py  app.py  config.py  elections_api_client.py  postcode.py  requirements.txt  s3_select_helper.py  static_data_helper.py  stitcher.py
api/frontend/: manage.py  pyproject.toml
api/frontend/frontend/: asgi.py  s3_lambda_storage.py
api/frontend/frontend/apps/api_docs/: urls.py
api/frontend/frontend/apps/api_docs/v1/docs/: elections_endpoints.apibp  finder_data_structures.apibp  finder_endpoints.apibp  notes.apibp  sandbox.apibp
api/frontend/frontend/apps/api_docs/v1/management/commands/: build_docs.py
api/frontend/frontend/apps/api_docs/v1/templates/: api_docs_rendered.html  api_docs_rendered_base.html  api_docs_template.html
api/frontend/frontend/apps/api_docs/v1/tests/: test_docs.py
api/frontend/frontend/apps/api_users/: admin.py  apps.py  dynamodb_helpers.py  forms.py  logging_helpers.py  models.py  urls.py  utils.py  views.py
api/frontend/frontend/apps/api_users/management/commands/: sync_api_keys.py  write_api_key_csvs_to_monitoring_s3.py
api/frontend/frontend/apps/api_users/templates/users/: logout.html  profile.html
api/frontend/frontend/apps/api_users/tests/: conftest.py  test_api_key_crud.py  test_logging_helpers.py
api/frontend/frontend/assets/scss/: styles.scss
api/frontend/frontend/settings/: base.py  base_lambda.py  lambda_debug_unmerged_assets.py  lambda_no_debug_unmerged_assets.py  local.example.py
api/frontend/frontend/templates/: base.html  home.html
api/frontend/frontend/templates/includes/: badge-card.html
api/tests/: conftest.py  helpers.py
api/tests/api_auth/: test_api_auth.py
api/tests/common/: test_async_requests.py  test_auth_models.py
api/tests/v1/elections/: test_elections_api_client.py  test_elections_for_postcode.py
api/tests/v1/sandbox/: test_sandbox.py
api/tests/v1/voting_information/: conftest.py  test_address.py  test_local_parquet.py  test_notifications.py  test_parl_boundary_changes.py  test_postcode.py  test_sort_ballots.py  test_stitcher.py  test_views.py
common/: pyproject.toml  requirements.txt
common/common/: api_client.py  async_requests.py  auth_models.py  conf.py  middleware.py  query_string.py  sentry_helper.py  url_resolver.py
docs/: colophon.md  new-aws-account-setup.md  new-ci-deployment.md  new-development-deployment.md
endpoints/v1/: postcodes.py  requirements.txt  stitcher.py  upstream_api_client.py
frontend/: lambda_awsgi.py  pyproject.toml  s3_lambda_storage.py  urls.py
frontend/apps/api/: middleware.py  urls.py
frontend/apps/api/v1/: stitcher.py  views.py
frontend/apps/api_users/: admin.py  dynamodb_helpers.py  forms.py  mixins.py  models.py  utils.py  views.py
frontend/apps/api_users/migrations/: 0002_remove_apikey_api_plan_apikey_key_type.py  0004_alter_apikey_api_plan.py
frontend/apps/api_users/tests/: conftest.py  test_api_key_creation.py  test_api_key_crud.py
frontend/assets/scss/: styles.scss
frontend/frontend/: s3_lambda_storage.py  urls.py  wsgi.py
frontend/frontend/apps/api_users/: dynamodb_helpers.py  forms.py  managers.py
frontend/frontend/settings/: base.py  base_lambda.py
frontend/frontend/templates/: terms.html
frontend/settings/: base.py  base_lambda.py  constants.py  lambda_no_debug_merged_assets.py
frontend/templates/: base.html  home.html  terms.html
lambda-layers/APICommonLayer/: Makefile
lambda-layers/DependenciesLayer/: Makefile
lambda-layers/FrontendDependenciesLayer/: Makefile
lambda-layers/PolarsLayer/: Makefile
psotman/: Aggregator-API-Local.postman_environment.json  Aggregator-API.postman_collection.json
samconfig.toml.d/: ci-development.toml  ci-production.toml  ci-staging.toml  development.toml  new-dev-env.py  staging.toml
tests/: conftest.py  helpers.py
tests/api_auth/: test_api_auth.py
tests/common/: test_auth_models.py  test_query_string.py
tests/v1/elections/: test_elections_api_client.py  test_elections_for_postcode.py
tests/v1/sandbox/: test_sandbox.py
tests/v1/voting_information/: test_address.py  test_boundary_changes.py  test_notifications.py  test_postcode.py  test_sort_ballots.py  test_static_data_helper.py  test_stitcher.py
(+130 files in other folders)
