[project]
name = "dc-api-common"
version = "0.0.4"
description = "Common elements to the DC API"
requires-python = "==3.12.*"
dependencies = [
    "httpx[http2]==0.26.0",
    "mangum==0.17.0",
    "starlette==0.49.1",
    "sentry-sdk[starlette]==2.32.0",

    # note: PEP508 syntax here instead of tool.uv.sources
    # so we can pip install the package
    "dc-logging-utils @ git+https://github.com/DemocracyClub/dc_logging.git@3.0.0"
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "common"
module-root = ""

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"
